# src/api/docs/swagger.json
@@ -65,7 +65,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Field to sort by. name, balance, transaction_count, transaction_internal_count, token_transfer_count. Use leading +/- for sort direction or omit for descending.",
+                        "description": "Field to sort by. name, balance, transaction_count, transaction_internal_count, token_transfer_count. Use leading `-` (ie -balance) for sort direction or omit for descending.",
                         "name": "sort",
                         "in": "query"
                     }
@@ -474,6 +474,34 @@
                             "items": {
                                 "$ref": "#/definitions/models.Log"
                             }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/stats": {
+            "get": {
+                "description": "get json with a summary of stats",
+                "consumes": [
+                    "*/*"
+                ],
+                "tags": [
+                    "Stats"
+                ],
+                "summary": "Get Stats",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     },
                     "422": {
